--- a/layouts/partials/popups/newsletter-popup.html
+++ b/layouts/partials/popups/newsletter-popup.html
@@ -1,3 +1,4 @@
+{{ partial "stylesheet" (dict "name" "css/popup.css") }}
 <div id="popup-newsletter" class="popup popup-attention popup-no-scroll popup-at-end popup-before-exit color0 scroll">
 	<span data-popup="newsletter" class="popup-exit">&times;</span>
 	{{ partial "signup" (dict "ctx" . "name" "newsletter") }}
