--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -38,7 +38,7 @@
 }
 .popup-notice {
 	border: 4px solid;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	padding: 15px;
 	font-size: 1.25rem;
